# typst-diff

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
crates/typst-cli/src/: diff.rs
crates/typst-diff/: Cargo.toml
crates/typst-diff-cli/: Cargo.toml
crates/typst-diff-cli/src/: args.rs  compile.rs  main.rs  watch.rs
crates/typst-diff-cli/tests/: common.rs  equal-texts.rs  one-paragraph-equal.rs  simple-doc.rs  two-paragraphs-equal.rs  unequal-texts.rs
crates/typst-diff/src/: content.rs  lib.rs
