[package]
name = "typst-diff"
description = "Library for diffing of Typst documents."
categories = ["compilers", "science"]
keywords = ["typesetting", "typst"]
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
doctest = false
bench = false

[dependencies]
comemo = { workspace = true }
ecow = { workspace = true }
tracing = { workspace = true }
typst = { workspace = true }
similar = "2.4.0"

[lints]
workspace = true

[dev-dependencies]
tracing-test = "0.2.4"
